--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     }
   },
   "dependencies": {
+    "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "vant": "^2.5.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.1",
