--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@vant/touch-emulator": "^1.2.0",
     "axios": "^0.19.0",
+    "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "vant": "^2.5.3",
     "vue": "^2.6.10",
