--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,6 +7,7 @@
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   },
+  "permissions": ["storage", "notifications"],
   "browser_action": {
     "default_title": "小特社区",
     "default_popup": "popup/popup.html"
@@ -15,6 +16,7 @@
     "scripts": [
       "background.js"
     ]
+    // "persistent": true
   },
   "options_ui": {
     "page": "options/options.html",
