--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chrome-xiaote",
-  "version": "1.0.2",
+  "version": "1.1.0-alpha",
   "description": "Xiaote community on chrome plugin.",
   "author": "Yimaoge",
   "license": "MIT",
