--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn 
-    - run: yarn lint
+    - run: yarn prettier
     - run: yarn build
       env:
         CI: true
