--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.19.0",
     "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
+    "url-loader": "^3.0.0",
     "vant": "^2.5.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.1",
