--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.4",
   "description": "Xiaote community on chrome plugin.",
   "author": "Yimaoge",
-  "license": "MIT",
+  "license": "GPL V3",
   "engines": {
     "node": ">=10"
   },
