--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "description": "Xiaote community on chrome plugin.",
   "author": "Yimaoge",
-  "license": "GPL V3",
+  "license": "GPL-3.0",
   "engines": {
     "node": ">=10"
   },
@@ -31,9 +31,11 @@
     "url-loader": "^3.0.0",
     "vant": "^2.5.3",
     "vue": "^2.6.10",
+    "vue-gtag": "^1.6.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
-    "webextension-polyfill": "^0.3.1"
+    "webextension-polyfill": "^0.3.1",
+    "minimist": "1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
